Videos still need work

--- a/html/index.html
+++ b/html/index.html
@@ -59,54 +59,57 @@
 
     <body>
         <div class = "container-fluid">
-            <div class="row mb-2">
-                <div class="card col-lg-6">
+            <div class="row mb-5">
+                <div class="card ml-5 mr-5 col-lg-5">
                   <img class="card-img-top mt-3" src="../images/term-project.png" alt="Card image cap">
-                  <div class="film flex-md-row mb-4 shadow-sm h-md-250 ">
+                  <!-- <div class="film flex-md-row mb-4 shadow-sm h-md-250 "> -->
                     <div class="col p-4 d-flex flex-column position-static">
-                      <strong class="d-inline-block mb-2 text-primary">Project/strong>
-                      <h3 class="mb-0">Red light Green light </h3>
-                      <div class="mb-1 text-muted">Dec. 2018</div>
-                      <p class="card-text mb-auto">Term Project for 15-112 coursw.</p>
-                      <a href="#" class="stretched-link">Learn More</a>
+                      <strong class="d-inline-block mb-2 text-primary">Project</strong>
+                      <h3 class="mb-0">Red Light Green Light </h3>
+                      <div class="mb-1 text-muted">December 2018</div>
+                      <p class="card-text">Term Project for 15-112 course.</p>
+                      <a href="redLight.html" class="stretched-link">Learn More</a>
                     </div>
-                  </div>
+                   <!-- </div> -->
                 </div>
-                <div class="card col-lg-6">
-                    <img class="card-img-top mt-3" src="../images/term-project.png" alt="Card image cap">
-                  <div class="film flex-md-row mb-4 shadow-sm h-md-250 ">
+                <div class="card ml-5 mr-5 col-lg-5">
+                    <img class="card-img-top mt-3" src="../images/mobileWebDesign.png" alt="Card image cap">
+                  <!-- <div class="film flex-md-row mb-4 shadow-sm h-md-250 "> -->
                     <div class="col p-4 d-flex flex-column position-static">
                       <strong class="d-inline-block mb-2 text-success">Course</strong>
-                      <h3 class="mb-0">Mobile Web Desingn and Development </h3>
+                      <h3 class="mb-0">Mobile Web Design</h3>
                       <div class="mb-1 text-muted"> Aug 2020 - Dec 2020</div>
-                      <p class="mb-auto"> Web design fundementals course.</p>
-                      <a href="#" class="stretched-link">Learn More</a>
+                      <p>Web design fundementals course.</p>
+                      <a href="mobileWeb.html" class="stretched-link">Learn More</a>
                     </div>
-                  </div>
+                  <!-- </div> -->
                 </div>
-                <div class="card col-lg-6">
-                    <img class="card-img-top mt-3" src="" alt="Card image cap">
-                  <div class="film flex-md-row mb-4 shadow-sm h-md-250 ">
+            </div>
+            <br>
+            <div class="row mb-5">
+                <div class="card ml-5 mr-5 col-lg-5">
+                    <img class="card-img-top mt-3" src="../images/webAppDesign.png" alt="Card Image Cap">
+                  <!-- <div class="film flex-md-row mb-4 shadow-sm h-md-250 "> -->
                     <div class="col p-4 d-flex flex-column position-static">
-                      <strong class="d-inline-block mb-2 text-success">TV Show</strong>
-                      <h3 class="mb-0">Suits</h3>
-                      <div class="mb-1 text-muted">Nov 2018 - Present</div>
-                      <p class="mb-auto">Fast-paced courtroom drama thats sure to have you hooked.</p>
-                      <a href="#" class="stretched-link">Learn More</a>
+                      <strong class="d-inline-block mb-2 text-success">Course</strong>
+                      <h3 class="mb-0">Web Application Design</h3>
+                      <div class="mb-1 text-muted">January 2020 - May 2020</div>
+                      <p>Implemented full-stack web application in Ruby.</p>
+                      <a href="webApp.html" class="stretched-link">Learn More</a>
                     </div>
-                  </div>
+                  <!-- </div> -->
                 </div>
-                <div class="card col-lg-6">
-                    <img class="card-img-top mt-3" src="" alt="Card image cap">
-                  <div class="film flex-md-row mb-4 shadow-sm h-md-250 ">
+                <div class="card ml-5 mr-5 col-lg-5">
+                  <img class="card-img-top mt-3" src="../images/udemy-course.png" alt="Card image cap">
+                  <!-- <div class="flex-md-row mb-4 shadow-sm h-md-250 "> -->
                     <div class="col p-4 d-flex flex-column position-static">
-                      <strong class="d-inline-block mb-2 text-success">TV Show</strong>
-                      <h3 class="mb-0">Suits</h3>
-                      <div class="mb-1 text-muted">Nov 2018 - Present</div>
-                      <p class="mb-auto">Fast-paced courtroom drama thats sure to have you hooked.</p>
-                      <a href="#" class="stretched-link">Learn More</a>
+                      <strong class="d-inline-block mb-2 text-success">Project</strong>
+                      <h3 class="mb-0">E-commerce website</h3>
+                      <div class="mb-1 text-muted">May 2020 -  August 2020</div>
+                      <p>E-commerce website built using Django and other API's.</p>
+                      <a href="udemy.html" class="stretched-link">Learn More</a>
                     </div>
-                  </div>
+                  <!-- </div> -->
                 </div>
               </div>
             </div>
@@ -114,4 +117,19 @@
 
 
     </body>
+
+    <footer class = "page-footer">
+      <div class="container">
+        <div class = "row">
+          <div class = "col l12 s12">
+            <a href="mailto:obi.nnaeto@gmail.com" class = "icon"><img class = "icons" src = "../images/email2.png"></a>
+            <a href="https://www.linkedin.com/in/obi-nnaeto-239933162/"  class = "icon" target="_blank"><img src = "../images/linkedin2.png"></a>
+            <a href="https://github.com/cnnaeto21"  class = "icon" target="_blank"><img src="../images/gitHubLogo.jpeg"></a>
+          </div>
+        </div>
+        <br>
+        &copy; OBI NNAETO 2021
+      </div>
+
+    </footer>
     </html>
