fixed linkedin photo in footer

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class = "row">
           <div class = "col l12 s12">
             <a href="mailto:obi.nnaeto@gmail.com" class = "icon"><img class = "icons" src = "../images/email2.png"></a>
-            <a href="https://www.linkedin.com/in/obi-nnaeto-239933162/"  class = "icon" target="_blank"><img src = "../images/linkedin2.png"></a>
+            <a href="https://www.linkedin.com/in/obi-nnaeto-239933162/"  class = "icon" target="_blank"><img src = "../images/linkedIn2.png"></a>
             <a href="https://github.com/cnnaeto21"  class = "icon" target="_blank"><img src="../images/gitHubLogo.jpeg"></a>
           </div>
         </div>
